--- a/src/components/Friend/Friend.css
+++ b/src/components/Friend/Friend.css
@@ -1,7 +1,7 @@
 .friend-div{
-    border: 1px solid gray;
-    margin: 20px;
+    /* border: 1px solid gray; */
+    margin: 50px;
     border-radius: 20px;
     padding: 30px;
-   
+   box-shadow: 3px 2px 30px rgb(226, 226, 226);
 }
